--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Crypt-OpenSSL-Random
-version:      0.04
-version_from: Random.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+---
+abstract: unknown
+author:
+  - unknown
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.68, CPAN::Meta::Converter version 2.120921'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Crypt-OpenSSL-Random
+no_index:
+  directory:
+    - t
+    - inc
+requires: {}
+resources:
+  homepage: http://sourceforge.net/projects/perl-openssl/
+  license: http://dev.perl.org/licenses/
+  repository: http://perl-openssl.cvs.sourceforge.net/viewvc/perl-openssl/Crypt/OpenSSL/Random/
+  x_MailingList: perl-openssl-users@lists.sourceforge.net
+version: 0.06
